fix bug for showcase gallery grid alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -661,9 +661,9 @@ showcase home page
 		}
 	}
 	ul.showcaseGalleryGrid {
-		padding:0 15px;
+		padding:0 24px;
 		min-height:165px;
-		text-align:center;
+		text-align:left;
 
 		/*grid item*/
 		li.col-xs-3 {
